--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: lab3elife599carde734
 Type: Package
-Title: Package for lab3 containing functions euclidean and dijkstra
-Version: 0.1
+Title: Package for assignment 3 in Advanced R
+Version: 1.0
 Date: 2021-09-08
 Authors@R: c(person("Elisio", "Quintino", email="elife599@student.liu.se", role=c("aut", "cre")),
              person("Carolina", "Rosario", email="carde734@student.liu.se", role=c("aut")))
-Description: Package for lab3 containing functions euclidean and dijkstra
+Description: Package for assignment 3 in Advanced R, containing functions euclidean and dijkstra, as well as dataset wiki_graph
 License: Not licensed atm
 RoxygenNote: 7.1.1
 Suggests: 
