--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,8 @@ Version: 1.0
 Date: 2021-09-08
 Authors@R: c(person("Elisio", "Quintino", email="elife599@student.liu.se", role=c("aut", "cre")),
              person("Carolina", "Rosario", email="carde734@student.liu.se", role=c("aut")))
-Description: Package for assignment 3 in Advanced R, containing functions euclidean and dijkstra, as well as dataset wiki_graph
-License: Not licensed atm
+Description: Package for assignment 3 in Advanced R. It contains functions euclidean and dijkstra, as well as dataset wiki_graph.
+License: MIT
 RoxygenNote: 7.1.1
 Suggests: 
     testthat (>= 3.0.0)
